data/manifests/artifacthub/harbor/harbor/030_statefulset_release-name-harbor-trivy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-harbor-trivy
  namespace: default
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: harbor
    app.kubernetes.io/version: 2.14.0
    component: trivy
    app.kubernetes.io/component: trivy
spec:
  replicas: 1
  serviceName: release-name-harbor-trivy
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: trivy
  template:
    metadata:
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/name: harbor
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: harbor
        app.kubernetes.io/version: 2.14.0
        component: trivy
        app.kubernetes.io/component: trivy
      annotations:
        checksum/secret: 6fbc9db4d37c6bc53260a46776f92e1e0390c1d50cd884e19a8d0a3c73deed8f
    spec:
      securityContext:
        runAsUser: 10000
        fsGroup: 10000
      automountServiceAccountToken: false
      containers:
      - name: trivy
        image: goharbor/trivy-adapter-photon:v2.14.0
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        ports:
        - name: api-server
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /home/scanner/.cache
          subPath: null
          readOnly: false
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /probe/healthy
            port: api-server
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /probe/ready
            port: api-server
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 512Mi
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
      annotations: null
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
