data/manifests/artifacthub/harbor/harbor/017_service_release-name-harbor-core.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-harbor-core
  namespace: default
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: harbor
    app.kubernetes.io/version: 2.14.0
spec:
  ports:
  - name: http-web
    port: 80
    targetPort: 8080
  selector:
    release: release-name
    app: harbor
    component: core
