data/manifests/artifacthub/harbor/harbor/020_service_release-name-harbor-portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-harbor-portal
  namespace: default
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: harbor
    app.kubernetes.io/version: 2.14.0
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    release: release-name
    app: harbor
    component: portal
